<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>es.s2o.automated-test</groupId>
	<artifactId>automated-test-core</artifactId>
	<packaging>jar</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>auttpa</name>
	<description>Proyecto padre para facilitar la creación de test automatizados</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>

		<suiteXmlFiles>src/test/resources/default-suite.xml</suiteXmlFiles>
		<testGroups>default,modoDemo</testGroups>
		<testExcludedGroups>noPro</testExcludedGroups>
		<suiteReport>suiteReport</suiteReport>

		<!-- Dependency version numbers -->
		<selenium-java.version>2.41.0</selenium-java.version>
		<com.typesafe.version>1.2.0</com.typesafe.version>
		<testng.version>6.8.8</testng.version>
		<org.tap4j.version>4.0.6</org.tap4j.version>
		<com.beust.jcommander.version>1.30</com.beust.jcommander.version>
		<slf4j.version>1.7.5</slf4j.version>
		<logback.version>1.0.13</logback.version>
		<org.yaml.snakeyaml.version>1.13</org.yaml.snakeyaml.version>
		<org.apache.poi.version>3.9</org.apache.poi.version>
		<commons-io.version>2.2</commons-io.version>
		<com.google.guava.guava.version>15.0</com.google.guava.guava.version>
		<org.apache.httpcomponents.httpclient.version>4.3.3</org.apache.httpcomponents.httpclient.version>
		<org.apache.httpcomponents.httpcore.version>4.3.2</org.apache.httpcomponents.httpcore.version>
		<org.apache.commons.commons-exec.version>1.1</org.apache.commons.commons-exec.version>
		<org.json.json.version>20080701</org.json.json.version>
		<xml-apis.version>2.0.2</xml-apis.version>
		<commons-logging.version>1.1.3</commons-logging.version>
		<org.apache.httpcomponents.httpcore-nio.version>4.3.2</org.apache.httpcomponents.httpcore-nio.version>

		<!-- Maven -->
		<maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
		<maven-surefire-report-plugin.version>2.16</maven-surefire-report-plugin.version>
		<maven-source-plugin.version>2.2.1</maven-source-plugin.version>
		<maven-compiler-plugin.version>2.5.1</maven-compiler-plugin.version>
		<maven-jar-plugin.version>2.4</maven-jar-plugin.version>
	</properties>


	<build>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<!-- Sólo para cuando se tiene instalado el Plugin Eclipse m2e (no la 
					versión antigua, m2eclipse) -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-ear-plugin</artifactId>
										<versionRange>[2.7,)</versionRange>
										<goals>
											<goal>generate-application-xml</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-resources-plugin</artifactId>
										<versionRange>[2.5.0,)</versionRange>
										<goals>
											<goal>copy-resources</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
			        <inputEncoding>${project.build.sourceEncoding}</inputEncoding>
			        <outputEncoding>${project.build.sourceEncoding}</outputEncoding>
			        <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -Dfile.encoding=${project.build.sourceEncoding}</argLine>
					<suiteXmlFiles>
						<suiteXmlFile>${suiteXmlFiles}</suiteXmlFile>
					</suiteXmlFiles>
					<!-- <groups>${testGroups}</groups> -->
					<excludedGroups>${testExcludedGroups}</excludedGroups>
					<reportsDirectory>${project.build.directory}/surefire-reports/${suiteReport}</reportsDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<compilerArgument>-Xlint:all</compilerArgument>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>${maven-surefire-report-plugin.version}</version>
				<configuration>
					<includes>
						<include>**/*Test.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven-source-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven-jar-plugin.version}</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Specification-Title>Automatización de test</Specification-Title>
							<Specification-Version>${project.version}</Specification-Version>
							<Specification-Vendor>La Caixa</Specification-Vendor>
							<Implementation-Title>Test Automatizados</Implementation-Title>
							<Implementation-Version>${project.version}</Implementation-Version>
							<Implementation-Vendor-Id>es.s2o</Implementation-Vendor-Id>
							<Implementation-Vendor>La Caixa</Implementation-Vendor>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>

		<!-- WebDriver -->
		<dependency>
        	<groupId>org.seleniumhq.selenium</groupId>
        	<artifactId>selenium-java</artifactId>
			<version>${selenium-java.version}</version>
    	</dependency>  
		<dependency>
			<groupId>org.yaml</groupId>
			<artifactId>snakeyaml</artifactId>
			<version>${org.yaml.snakeyaml.version}</version>
		</dependency>
		<dependency>
			<groupId>com.beust</groupId>
			<artifactId>jcommander</artifactId>
			<version>${com.beust.jcommander.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>${org.apache.httpcomponents.httpclient.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpcore</artifactId>
			<version>${org.apache.httpcomponents.httpcore.version}</version>
		</dependency>

		<!-- For testing -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>${testng.version}</version>
		</dependency>
		<dependency>
			<groupId>org.tap4j</groupId>
			<artifactId>tap4j-ext</artifactId>
			<version>${org.tap4j.version}</version>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${com.google.guava.guava.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-exec</artifactId>
			<version>${org.apache.commons.commons-exec.version}</version>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>${org.json.json.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>${commons-logging.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpcore-nio</artifactId>
			<version>${org.apache.httpcomponents.httpcore-nio.version}</version>
		</dependency>
		<!-- Simple logger -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			<version>${logback.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
		</dependency>

		<!-- Para facilitar la configuración https://github.com/typesafehub/config -->
		<dependency>
			<groupId>com.typesafe</groupId>
			<artifactId>config</artifactId>
			<version>${com.typesafe.version}</version>
		</dependency>

		<!-- Gestión de excel -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>${org.apache.poi.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>${org.apache.poi.version}</version>
		</dependency>
		<dependency>
			<groupId>xml-apis</groupId>
			<artifactId>xml-apis</artifactId>
			<version>${xml-apis.version}</version>
			<type>pom</type>
		</dependency>


		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>itextpdf</artifactId>
			<version>5.5.0</version>
		</dependency>

	</dependencies>

	<distributionManagement>
		<repository>
			<id>s2o.release</id>
			<name>Absis Releases</name>
			<url>http://arqopasp01.s2o.es:8081/nexus/content/repositories/s2o-releases/</url>
		</repository>
		<snapshotRepository>
			<id>s2o.snapshots</id>
			<name>Absis Snapshots</name>
			<url>http://arqopasp01.s2o.es:8081/nexus/content/repositories/s2o-snapshot/</url>
		</snapshotRepository>
	</distributionManagement>
</project>
